--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,11 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/admin_toolbar": "^1.24",
         "drupal/console": "^1.0.2",
         "drupal/core": "8.*",
+        "drupal/ds": "^3.1",
+        "drupal/paragraphs": "^1.5",
         "drush/drush": "^8.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
